[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "package_avinda_shamal"
version = "0.0.1"
authors = [
  { name = "Avinda Shamal", email = "avindashamal@gmail.com" },
]
description = "A package containing Custom Image Dataset classes for both raw files and Hugging Face datasets"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools.packages.find]
where = ["avinda_shamal/src"]  # Point to the 'src' folder inside 'avinda_shamal'
