[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cvas"
version = "0.0.1"
authors = [
  { name = "Avinda Shamal", email = "avindashamal@gmail.com" },
]
description = "A package containing Custom Image Dataset classes for both raw files and Hugging Face datasets"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch==2.5.0",
  "torchvision==0.20.0",
  "matplotlib==3.9.0"
]

[tool.setuptools.packages.find]
where = ["src"]  # Point to the 'src' folder inside 'avinda_shamal'

